# redesigned-winner

./: AGENT.md  README.md  analyze.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
docs/: architecture.md  design.md  requirements.md
scripts/: generate_sample_data.py
src/: __init__.py  cli.py  data_loader.py  quality_analyzer.py  suggestion_engine.py  trend_analyzer.py  web_app.py
tests/: test_analyzer.py
